--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ nltk
 dataclasses
 sacrebleu==2.4.0
 rouge_score==0.1.2
-flash-attn==2.3.6
+#flash-attn==2.3.6
 einops==0.7.0
 sentencepiece
 deepspeed==0.12.6
@@ -26,7 +26,7 @@ tokenizers==0.15.0
 tensorboard==2.14.0
 openai==0.28.1
 tiktoken==0.5.2
-
+backoff==2.2.1
 # Please install factscore in a separate
 # env. There are conflicts with other 
 # packages.
